<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingTop="57dp"
    android:paddingLeft="25dp"
    android:paddingRight="25dp">

    <LinearLayout
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:src="@drawable/diamond"/>
            <TextView
                android:layout_marginLeft="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_check_message"
                android:textColor="@color/CoboltBlue"
                android:textSize="13sp" />
        </LinearLayout>

        <FrameLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:background="@drawable/gray_border_box"
            android:orientation="horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"/>

            <Button
                android:id="@+id/isDuplicateIdBtn"
                android:layout_marginRight="7dp"
                android:layout_gravity="right|center_vertical"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="@drawable/gray_border_box_for_pressed"
                android:hint="@string/check_duplicate_id"
                android:padding="3dp" />
        </FrameLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:src="@drawable/diamond"/>
            <TextView
                android:layout_marginLeft="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="20sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <FrameLayout
            android:layout_marginBottom="25dp"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:background="@drawable/gray_border_box"
            android:orientation="horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/pw_make_hint"
                android:inputType="textEmailAddress"/>
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:src="@drawable/diamond"/>
            <TextView
                android:layout_marginLeft="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_password"
                android:textSize="20sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <FrameLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:background="@drawable/gray_border_box"
            android:orientation="horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/pw_make_hint"
                android:inputType="textEmailAddress"/>
        </FrameLayout>
    </LinearLayout>




</LinearLayout>